Changelog
=========


1.15.2 (unreleased)
-------------------

- Configure logging for the command line utility.  By default print
  only our own logging, on info level or higher.  With the new
  ``--verbose`` option print all loggers (so also from other packages
  like ``requests``) at debug level and higher.  [maurits]

- Added ``plone_upgrade`` command to upgrade a Plone Site.  This is
  what you would manually do in the ``@@plone-upgrade`` view.  [maurits]

- Added support for installing profiles.  Profiles are only applied
  once.  Example command line: ``bin/upgrade install --site Plone
  --profiles Products.PloneFormGen:default``.  [maurits]

- Prevented UnicodeEncodeError when piping output of ``bin/upgrade
  sites``.  This would fail when a site had non-ascii characters in
  its title.  [maurits]


1.15.1 (2015-11-11)
-------------------

- Change instance detection to support any name.
  Before only "instance*" was supported.
  [jone]


1.15.0 (2015-10-30)
-------------------

- Make "blessed" dependency optional in the "colors" extras.
  [jone]

- Update references to class-migrated objects in the intid utility.
  [deiferni]


1.14.8 (2015-09-21)
-------------------

- Migrate workflow states with wfhistory migration and do not set state manually unless necessary.
  [tschanzt]


1.14.7 (2015-08-27)
-------------------

- Add an afterCommitHook that notifies about the transaction having been
  committed (or aborted) after installing upgrades.
  [lgraf]

- Fix authentication problem with bin/upgrade command.
  [jone]


1.14.6 (2015-07-22)
-------------------

- Return context manager to allow "as" statements.
  [lknoepfel]


1.14.5 (2015-05-20)
-------------------

- Update quickinstaller product version when upgrading a package.
  [jone]


1.14.4 (2015-04-09)
-------------------

- Fix post upgrade ordering which was broken since 1.11.0.
  [jone]


1.14.3 (2015-03-29)
-------------------

- Fix error in upgrade-step:directory directive.